# personal_agents

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  README.md  hello.py  pyproject.toml  refactoring-plan.md  refactoring-summary.md  xpyproject.toml
src/: README.md  api_server.py  basic.py  db.py  plan_and_execute.py  run_all_coverage.py  run_coverage.py  run_tests.py  test_api_server.py  test_integration.py  test_plan_and_execute.py  test_workflow_execution.py  view_workflow_logs.py  workflow_ai.py  workflow_logger.py  workflows.py
src/flowcharts/: current_flowchart.yaml
src/ui/: README.md  index.html  package-lock.json  package.json  script.js  styles.css
src/ui/src/: App.svelte  app.css
src/ui/src/lib/components/: ActNode.svelte  ChoiceNode.svelte  Connection.svelte  FlowChart.svelte  Node.svelte  TerminalNode.svelte
src/ui/vue-app/: .eslintrc.js  README.md  jest.config.js  package-lock.json  package.json  run.sh  vue.config.js  webpack.config.js
src/ui/vue-app/public/: index.html
src/ui/vue-app/src/: App.vue
src/ui/vue-app/src/components/: FlowchartCanvas.vue  FlowchartNode.vue  Toolbar.vue  WorkflowModal.vue  WorkflowStatusModal.vue
src/ui/vue-app/tests/: WorkflowModal.spec.js
src/workflows/: workflow1.yaml  workflow2.yaml
