[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-executor"
version = "0.1.0"
description = "A LangGraph executor project"
requires-python = ">=3.12,<3.13"
dependencies = [
  "python-dotenv",
  "langgraph",
  "langchain-anthropic>=0.3.7",
  "ipykernel>=6.29.5",
  "tavily-python>=0.5.1",
  "pydantic>=2.10.6",
  "langchain-openai>=0.3.6",
  "pillow>=11.1.0",
  "grandalf>=0.8",
  "fastapi>=0.115.8",
  "uvicorn>=0.34.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
